# edla-rs

./: .gitignore  Cargo.toml  README.md
ed_reworked/: ed_calculation_learning.c  ed_calculation_output.c  ed_calculation_weight.c  ed_init_network.c  ed_main.c  ed_main.h  ed_pattern_generation.c  ed_user_network_params.c  ed_write.c
src/core/: mod.rs  network.rs  neuron.rs  training.rs  utils.rs
tests/: test.rs
